--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#157878">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-  <link href='https://tuur29.github.io/pages-themes-cayman/assets/css/style.css?v=735c8d42815002091c7c29ee2d54559ed2762675' rel='stylesheet' type='text/css'> 
+  <link href='https://pages-themes.github.io/cayman/assets/css/style.css?v=e44678c82e18a7dc22c4ee766d5ff766c650c896' rel='stylesheet' type='text/css'> 
 </head>
 © 2021 GitHub, Inc.
 
