--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,8 @@
     .maincontent table { width: 100%; -webkit-overflow-scrolling: touch; }
     .maincontent table td { padding: 0.5rem 1rem; border: 1px solid #e9ebec; }
     .footer { padding-top:2rem; margin-top:2rem; border-top: solid 1px #eff0f1; }
+    
+    @media screen and (max-width: 42em){.main-content{padding:2rem 1rem;font-size:1rem} .name{font-size:2.5rem}}
   </style>
 </head>
 <body style="background-color: #e9e9e9;">
