--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,12 +21,12 @@
     .maincontent table td { padding: 0.5rem 1rem; border: 1px solid #e9ebec; }
     .footer { padding-top:2rem; margin-top:2rem; border-top: solid 1px #eff0f1; }
     
-    @media screen and (max-width: 42em){.main-content{padding:2rem 1rem;font-size:1rem} .name{font-size:2.5rem}}
+    @media screen and (max-width: 42em){.name{font-size:2.5rem}} /* .btn{padding:0.6rem 0.9rem;font-size:0.9rem} */
   </style>
 </head>
 <body style="background-color: #e9e9e9;">
   <section class="header">
-    <h1 class="name">{{ site.title }}</h1>
+    <h1 class="name">Better TaskBar</h1>
     <h2 class="tagline">{{ site.tagline }}</h2>
     <a href="{{ site.Buttons.btn1_url }}" class="btn">{{ site.Buttons.btn1_text }}</a>
     <a href="{{ site.Buttons.btn2_url }}" class="btn">{{ site.Buttons.btn2_text }}</a>
