--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 </head>
 <body style="background-color: #e9e9e9;">
   <section class="header">
-    <h1 class="name">Better TaskBar</h1>
+    <h1 class="name">{{ site.name }}</h1>
     <h2 class="tagline">{{ site.tagline }}</h2>
     <a href="{{ site.Buttons.btn1_url }}" class="btn">{{ site.Buttons.btn1_text }}</a>
     <a href="{{ site.Buttons.btn2_url }}" class="btn">{{ site.Buttons.btn2_text }}</a>
